fix bugs layout

--- a/PunkBeer/Base.lproj/Main.storyboard
+++ b/PunkBeer/Base.lproj/Main.storyboard
@@ -98,11 +98,18 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mZz-c1-saT">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mZz-c1-saT">
                                                     <rect key="frame" x="96" y="8" width="182" height="184"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="182" id="FYI-tj-Cbq"/>
+                                                        <constraint firstAttribute="height" constant="184" id="HKr-Ev-y76"/>
+                                                    </constraints>
                                                 </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="mZz-c1-saT" firstAttribute="centerX" secondItem="oqz-q9-S8G" secondAttribute="centerX" id="IgN-0n-qTS"/>
+                                                <constraint firstItem="mZz-c1-saT" firstAttribute="centerY" secondItem="oqz-q9-S8G" secondAttribute="centerY" id="Xfw-wD-Mnk"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
@@ -138,7 +145,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CRH-c4-biy">
-                                                    <rect key="frame" x="8" y="9" width="359" height="182"/>
+                                                    <rect key="frame" x="8" y="9" width="305" height="182"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
